[project]
name = "mortgagecalculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "pandas>=2.3.2",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
]
